vclusters/private/overleaf/debug.yml
apiVersion: v1
kind: Pod
metadata:
  name: dns-test-pod
  namespace: overleaf  # Overleafと同じ名前空間を指定
spec:
  containers:
  - name: busybox
    image: busybox:1.37
    command: ['sh', '-c', 'sleep 3600'] # 1時間スリープさせてPodを起動したままにする
