vclusters/private/overleaf/mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.35.0 (HEAD)
  labels:
    io.kompose.service: mongo
  name: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mongo
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.35.0 (HEAD)
      labels:
        io.kompose.service: mongo
    spec:
      containers:
        - args:
            - --replSet
            - overleaf
          image: mongo:8.0
          livenessProbe:
            exec:
              command:
                - echo 'db.stats().ok' | mongo localhost:27017/test --quiet
            failureThreshold: 5
            periodSeconds: 10
            timeoutSeconds: 10
          name: mongo
          volumeMounts:
            - mountPath: /data/db
              name: mongo-claim0
            - mountPath: /docker-entrypoint-initdb.d/mongodb-init-replica-set.js
              name: mongo-claim1
      restartPolicy: Always
      volumes:
        - name: mongo-claim0
          persistentVolumeClaim:
            claimName: mongo-claim0
        - name: mongo-claim1
          persistentVolumeClaim:
            claimName: mongo-claim1
