vclusters/private/overleaf/overleaf-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: overleaf
  name: overleaf
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: overleaf
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: overleaf
    spec:
      nodeName: k8s-worker-1
      containers:
        - resources:
            limits:
              cpu: 1000m
              memory: 4Gi
            requests:
              memory: 4Gi
          image: tuetenk0pp/sharelatex-full:6.3.0
          name: overleaf
#          securityContext:
#            allowPrivilegeEscalation: false
#            capabilities:
#              drop:
#                - ALL
#            privileged: false
#            readOnlyRootFilesystem: true
#            seLinuxOptions: {}
#            seccompProfile:
#              type: RuntimeDefault
#            runAsUser: 0
#            runAsGroup: 0
#            runAsNonRoot: true
          ports:
            - containerPort: 80
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/overleaf
              name: overleaf-data
      securityContext:
        fsGroup: 65534
#        fsGroupChangePolicy: Always
        runAsUser: 0
        runAsGroup: 0
      restartPolicy: Always
      terminationGracePeriodSeconds: 60
      volumes:
        - name: overleaf-data
          persistentVolumeClaim:
            claimName: overleaf-data
