vclusters/private/overleaf/sharelatex-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.35.0 (HEAD)
  labels:
    io.kompose.service: sharelatex
  name: sharelatex
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: sharelatex
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.35.0 (HEAD)
      labels:
        io.kompose.service: sharelatex
    spec:
      containers:
        - env:
            - name: EMAIL_CONFIRMATION_DISABLED
              value: "true"
            - name: ENABLED_LINKED_FILE_TYPES
              value: project_file,project_output_file
            - name: ENABLE_CONVERSIONS
              value: "true"
            - name: OVERLEAF_APP_NAME
              value: Overleaf Community Edition
            - name: OVERLEAF_MONGO_URL
              value: mongodb://mongo/sharelatex
            - name: OVERLEAF_REDIS_HOST
              value: redis
            - name: REDIS_HOST
              value: redis
            - name: SANDBOXED_COMPILES
              value: "true"
            - name: SANDBOXED_COMPILES_HOST_DIR
              value: /home/user/sharelatex_data/data/compiles
            - name: SANDBOXED_COMPILES_SIBLING_CONTAINERS
              value: "true"
            - name: TEXMFVAR
              value: /var/lib/overleaf/tmp/texmf-var
          image: sharelatex/sharelatex
          name: sharelatex
          ports:
            - containerPort: 80
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/overleaf
              name: sharelatex-claim0
      restartPolicy: Always
      terminationGracePeriodSeconds: 60
      volumes:
        - name: sharelatex-claim0
          persistentVolumeClaim:
            claimName: sharelatex-claim0
