vclusters/private/overleaf/mongo-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo-mongodb-headless
spec:
  ports:
    - name: "27017"
      port: 27017
      targetPort: 27017
  selector:
    io.kompose.service: mongo
