vclusters/private/overleaf/redis-service.yml
apiVersion: v1
kind: Service
metadata:
  name: redis-headless
spec:
  ports:
    - name: "6379"
      port: 6379
      targetPort: 6379
  selector:
    io.kompose.service: redis
