vclusters/private/overleaf/overleaf-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
  name: overleaf
  namespace: overleaf
spec:
  ingressClassName: nginx
  rules:
  - host: overleaf.ichigo.dev
    http:
      paths:
      - backend:
          service:
            name: sharelatex
            port:
              number: 80
        path: /
        pathType: Prefix
