vclusters/private/overleaf/allow-all-overleaf-np.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-within-namespace
  namespace: overleaf # Overleafがデプロイされている名前空間
spec:
  # このポリシーを名前空間内の全てのPodに適用
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  # Ingress: 全ての受信(Ingress)通信を許可
  ingress:
    - {}
  # Egress: 全ての送信(Egress)通信を許可
  egress:
    - {}
